syntax = "proto3";
package expensegenie;

import "google/protobuf/timestamp.proto";

message User {
  string name = 1;
  string email = 2;
  string google_id = 3;
  string profile_pic = 4;
  google.protobuf.Timestamp created_at = 5;
}
